<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/ToDoList" />

    <item
        android:id="@+id/navigation_assigment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Assigments" />

    <item
        android:id="@+id/navigation_exams"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Exams" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Courses" />

</menu>