<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_to_do">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.planningbuddy.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.planningbuddy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_to_do"
        android:name="com.example.planningbuddy.ui.todo.ToDoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_to_do" />
    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.planningbuddy.ui.courses.CourseFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" />
</navigation>